test/files/neg/t0218.check
t0218.scala:10: error: type P is abstract; cannot be instantiated
    List(new PP) 
         ^
one error found
